--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style1.css" />
   </head>
   <body>
     <!-- Header -->
@@ -54,6 +54,12 @@
             </li>
           </ul>
         </address>
+
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-mobile   "></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -330,7 +336,7 @@
 
       <!-- Portfolio-list -->
 
-      <section class="portfolio-list">
+      <!-- <section class="portfolio-list">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list-blocks">
@@ -462,14 +468,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- End Section Portfolio -->
     </main>
 
     <!-- Fotter -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container container-footer">
         <div class="box-footer-logo">
           <a class="logo-footer" href="./index.html"
@@ -538,12 +544,12 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Fotter end -->
 
     <!-- Modal window-Input -->
 
-    <div class="backdrop" data-modal>
+    <!-- <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
           <svg class="icon-close" width="8" height="8">
@@ -606,10 +612,10 @@
               name="user-comment"
               placeholder="Text input"
             ></textarea>
-          </div>
+          </div> -->
 
-          <!-- check box -->
-          <div class="field-checkbox">
+    <!-- check box -->
+    <!-- <div class="field-checkbox">
             <input
               class="checkbox-input visually-hidden"
               name="user-privacy"
@@ -631,7 +637,7 @@
           <button type="submit" class="button-modal">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
   </body>
