--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
       <!-- Portfolio-list -->
 
-      <!-- <section class="portfolio-list">
+      <section class="portfolio-list">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list-blocks">
@@ -468,7 +468,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- End Section Portfolio -->
     </main>
