--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
             </li>
           </ul>
         </address>
-
         <button class="burger-btn" type="button">
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-mobile   "></use>
@@ -475,7 +474,7 @@
 
     <!-- Fotter -->
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container container-footer">
         <div class="box-footer-logo">
           <a class="logo-footer" href="./index.html"
@@ -544,7 +543,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Fotter end -->
 
     <!-- Modal window-Input -->
