--- a/index.html
+++ b/index.html
@@ -54,11 +54,80 @@
             </li>
           </ul>
         </address>
-        <button class="burger-btn" type="button">
+        <button class="burger-btn" type="button" data-menu-open>
           <svg class="burger-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-mobile   "></use>
+            <use href="./images/icons.svg#icon-mobile"></use>
           </svg>
         </button>
+      </div>
+
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <button
+            id="close-mobil-menu"
+            class="mobile-menu-close" data-menu-close
+            type="button"
+            data-mobile-close
+          >
+            <svg class="close-menu-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-mobile"></use>
+            </svg>
+          </button>
+         
+         
+         <nav class="mobile-menu-nav">
+            <ul class="navigation-mobile">
+              <li>
+                <a class="link-navigation-mobile corrent" href="#">Studio</a>
+              </li>
+              <li><a class="link-navigation-mobile" href="#">Portfolio</a></li>
+              <li><a class="link-navigation-mobile" href="#">Contacts</a></li>
+            </ul>
+          </nav>
+         <address class="address-mobile">
+            <ul class="contact-mobile">
+              <li>
+                <a class="link-contact-mobile" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="link-contact-mobile" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="list-icon-mobile">
+            <li class="mobile-link-social">
+              <a class="mobile-social" href="#">
+                <svg class="icon-team" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-link-social">
+              <a class="mobile-social" href="#">
+                <svg class="icon-team" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-link-social">
+              <a class="mobile-social" href="#">
+                <svg class="icon-team" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-link-social">
+              <a class="mobile-social" href="#">
+                <svg class="icon-team" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
       </div>
     </header>
 
@@ -548,7 +617,7 @@
 
     <!-- Modal window-Input -->
 
-    <!-- <div class="backdrop" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
           <svg class="icon-close" width="8" height="8">
@@ -611,10 +680,10 @@
               name="user-comment"
               placeholder="Text input"
             ></textarea>
-          </div> -->
+          </div>
 
     <!-- check box -->
-    <!-- <div class="field-checkbox">
+    <div class="field-checkbox">
             <input
               class="checkbox-input visually-hidden"
               name="user-privacy"
@@ -636,8 +705,9 @@
           <button type="submit" class="button-modal">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
