--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
           <ul class="team-list-blocks">
             <li class="team-list-box">
               <img
+                srcset="./images/img-3.jpg 1x, ./images/img-3@2x.jpg 2x"
                 src="./images/img-3.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -260,7 +261,8 @@
             </li>
 
             <li class="team-list-box">
-              <img
+             <img
+                srcset="./images/img-2.jpg 1x, ./images/img-2@2x.jpg 2x"
                 src="./images/img-2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -307,6 +309,7 @@
 
             <li class="team-list-box">
               <img
+                srcset="./images/img-1.jpg 1x, ./images/img-1@2x.jpg 2x"
                 src="./images/img-1.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -353,7 +356,8 @@
 
             <li class="team-list-box">
               <img
-                src="./images/img.jpg"
+                srcset="./images/img-0.jpg 1x, ./images/img-0@2x.jpg 2x"
+                src="./images/img-0.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -410,13 +414,31 @@
           <ul class="portfolio-list-blocks">
             <li class="portfolio-content">
               <div class="box-overlay">
-                <img
-                  class="portfolio-image"
-                  src="./images/ourpotfolio1.jpg"
-                  alt="pictur of Banking app"
-                  width="360"
-                  height="300"
-                />
+                 <picture>
+                  <source
+                    srcset="
+                      ./images/img-portf-1.jpg    1x,
+                      ./images/img-portf-1@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-1-tab.jpg    1x,
+                      ./images/img-portf-1-tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-1-mob.jpg    1x,
+                      ./images/img-portf-1-mob@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)" />
+                  <img
+                    src="./images/img-portf-1-mob.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -432,12 +454,31 @@
 
             <li class="portfolio-content">
               <div class="box-overlay">
-                <img
-                  src="./images/ourportfolio2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+              <picture>
+                  <source
+                    srcset="
+                      ./images/img-portf-2.jpg    1x,
+                      ./images/img-portf-2@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-2-tab.jpg    1x,
+                      ./images/img-portf-2-tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-2-mob.jpg    1x,
+                      ./images/img-portf-2-mob@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)" />
+                  <img
+                    src="./images/img-portf-2-mob.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -453,12 +494,31 @@
 
             <li class="portfolio-content">
               <div class="box-overlay">
-                <img
-                  src="./images/ourportfolio3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+               <picture>
+                  <source
+                    srcset="
+                      ./images/img-portf-3.jpg    1x,
+                      ./images/img-portf-3@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-3-tab.jpg    1x,
+                      ./images/img-portf-3-tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-3-mob.jpg    1x,
+                      ./images/img-portf-3-mob@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)" />
+                  <img
+                    src="./images/img-portf-3-mob.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -474,12 +534,31 @@
 
             <li class="portfolio-content">
               <div class="box-overlay">
-                <img
-                  src="./images/ourportfolio4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                 <picture>
+                  <source
+                    srcset="
+                      ./images/img-portf-4.jpg    1x,
+                      ./images/img-portf-4@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-4-tab.jpg    1x,
+                      ./images/img-portf-4-tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-4-mob.jpg    1x,
+                      ./images/img-portf-4-mob@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)" />
+                  <img
+                    src="./images/img-portf-4-mob.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -495,12 +574,31 @@
 
             <li class="portfolio-content">
               <div class="box-overlay">
-                <img
-                  src="./images/ourportfolio5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portf-5.jpg    1x,
+                      ./images/img-portf-5@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-5-tab.jpg    1x,
+                      ./images/img-portf-5-tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-5-mob.jpg    1x,
+                      ./images/img-portf-5-mob@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)" />
+                  <img
+                    src="./images/img-portf-5-mob.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -516,12 +614,31 @@
 
             <li class="portfolio-content">
               <div class="box-overlay">
-                <img
-                  src="./images/ourportfolio6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/img-portf-6.jpg    1x,
+                      ./images/img-portf-6@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-6-tab.jpg    1x,
+                      ./images/img-portf-6-tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-portf-6-mob.jpg    1x,
+                      ./images/img-portf-6-mob@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)" />
+                  <img
+                    src="./images/img-portf-6-mob.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="text-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
